add region predict dto
