# internal/app/server/server.go
@@ -53,5 +53,6 @@ func (s *server) configureRouter() {
 	v1 := s.router.Group("/v1")
 	{
 		v1.POST("/file", s.v1.AddFile())
+		v1.GET("/region/predict", s.v1.GetRegionPredictList())
 	}
 }
